--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "mysql2": "^3.12.0",
+    "nodemon": "^3.1.7",
+    "ssh2": "^1.16.0"
   }
 }
