--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -16,9 +16,10 @@ jobs:
 
     - name: Install cloudflared and sshpass
       run: |
-        apt-get update && apt-get install -y curl sshpass && \
+        sudo apt-get update && sudo apt-get install -y curl sshpass && \
         curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-arm.deb -o cloudflared.deb && \
         dpkg -i cloudflared.deb && \
+        chmod +x cloudflared && \
         rm cloudflared.deb
 
     - name: Create .ssh directory
