--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -18,9 +18,9 @@ jobs:
       run: |
         sudo apt-get update && sudo apt-get install -y curl sshpass && \
         curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-arm.deb -o cloudflared.deb && \
-        dpkg -i cloudflared.deb && \
-        chmod +x cloudflared && \
-        rm cloudflared.deb
+        sudo dpkg -i cloudflared.deb && \
+        sudo chmod +x cloudflared && \
+        sudo rm cloudflared.deb
 
     - name: Create .ssh directory
       run: |
