--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -19,7 +19,7 @@ jobs:
         sudo apt-get update && sudo apt-get install -y curl sshpass && \
         curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -o cloudflared.deb && \
         sudo dpkg -i cloudflared.deb && \
-        sudo chmod +x cloudflared && \
+#        sudo chmod +x cloudflared && \
         sudo rm cloudflared.deb
 
     - name: Create .ssh directory
