--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -16,11 +16,10 @@ jobs:
 
     - name: Install cloudflared and sshpass
       run: |
-        sudo apt-get update && sudo apt-get install -y curl sshpass && \
-        curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -o cloudflared.deb && \
-        sudo dpkg -i cloudflared.deb && \
-#        sudo chmod +x cloudflared && \
-        sudo rm cloudflared.deb
+        apt-get update && sudo apt-get install -y curl sshpass
+        curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
+        chmod +x cloudflared
+        sudo mv cloudflared /usr/local/bin/
 
     - name: Create .ssh directory
       run: |
