Docker image push in deploy bug fix

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Build Docker image
       run: |
         docker login -u lmerta -p ${{ secrets.DOCKER_PASSWORD }}
-        docker buildx build --platform linux/arm/v7 -t lmerta/tws-kahoot:latest --push .
+        docker buildx build --platform linux/arm/v7 -t lmerta/web-server-admin:latest --push .
 
     - name: Deploy Docker image to Raspberry Pi
       env:
