Remove platform specification from Docker build

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Build Docker image
       run: |
         docker login -u lmerta -p ${{ secrets.DOCKER_PASSWORD }}
-        docker buildx build --platform linux/arm/v7 -t lmerta/web-server-admin:latest --push .
+        docker buildx build -t lmerta/web-server-admin:latest --push .
 
     - name: Setup SSH key
       env:
